21 June 2006: Wouter
	- nsid commandline parsed using hex_pton routine.
	- unit test for hex_pton.

20 June 2006: Wouter
	- updated configure to disable -O2 on platforms where gcc 
	  does not like it (such as dec-alpha).
	- nsd-notify used recvfrom and passed addrinfo.ai_addrlen
	  which is a size_t, but recfrom needs a socklen_t*. On dec
	  alpha these types differ in size (size_t is 64bit, 
	  socklen_t is 32bit). Therefore, used a wrapper variable
	  to pass to recvfrom.
	- changed long int to time_t in nsd-patch.c to please compiler
	  on dec alpha.
	- dec alpha complains if statements are in front of variable
	  definitions. Fixed code for some mixups on this.
	- Fixup cutest for dec alpha. Code, lowercase filename, %lf->%f.
	- cutest fixup uses (size_t) cast and %zx to print ptrs (for debug).
	- for SunOS4 configure detects ssize_t and struct timespec.
	- removed usage of fpos_t, instead using fseeko/ftello for 64bit.
	- configure will define fseeko/ftello with fseek/ftell if unavailable.
	- added missing include from buffer.c (stdlib for free()).
	- defines for snprintf and vsnprintf in config.h if needed.
	- configlexer flex is called more cleanly with -t to write stdout.
	- missing include from configparser, stdlib for atoi.
	- config.h provide inet_pton define if it is not available.
	- fixup of INET6 defines, where sockaddr_storage is used
	  outside of INET6 defines, in xfrd-tcp.
	- edns_init_nsid was not defined in edns.h.
	- added compat/fake-rfc2553.c and h from openssh 4.3p2. That has
	  a BSD license as well. They replace getaddrinfo() (and friends)
	  when those are missing.

19 June 2006: Wouter
	- updated the tpkg/manual tests for NSD 3 config files.
	  Some need root privileges to run (using hping), they all pass.
	- also the tpkg/long test bug_sighup.
	- nsec3 code will warn at prehash time for missing exact nsec3
	  records. So faulty signed zones are more easily spotted.
	- fixed NSEC3 and CNAME/DNAME chains, it will disprove the new qname.