@@ -15,6 +15,7 @@
 #include <arpa/inet.h>
 #include <ctype.h>
 #include <netdb.h>
+#include <stdlib.h>
 #include <string.h>
 #ifdef HAVE_STRINGS_H
 #include <strings.h>
