@@ -9,6 +9,7 @@
 
 
 #include <config.h>
+#include <stdlib.h>
 
 #include "tsig.h"
 #include "tsig-openssl.h"
