@@ -9,6 +9,7 @@
 
 #include <config.h>
 #include <stdio.h>
+#include <stdlib.h>
 #include <ctype.h>
 #include <errno.h>
 #include "xfrd-disk.h"
