@@ -1,6 +1,8 @@
 21 June 2006: Wouter
 	- nsid commandline parsed using hex_pton routine.
 	- unit test for hex_pton.
+	- added include stdlib, needed for free() on sunos4.
+	- fixup of disable-ipv6 compilation.
 
 20 June 2006: Wouter
 	- updated configure to disable -O2 on platforms where gcc 
